--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html lang="en" style="width:100%; height:100%;">
 <head>
+  <meta http-equiv="refresh" content="0;url=https://www.cleanenergytransition.org/files/nwddp-key-findings" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <title>Key Findings | Meeting the Challenge of Our Time</title>
+  <title>NWDDP: Key Findings</title>
 </head>
-  <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url=https://github.com/cleanenergytransition/mtc-report-key-findings/raw/gh-pages/NWDDP%20Study%20Key%20Findings.pdf&embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+  <body>
   </body>
 </html>
